@@ -1,7 +1,0 @@
-#
-# If you want to use this conffile, remove all comments and put files that
-# you want dpkg to process here using their absolute pathnames.
-# See the policy manual
-#
-# for example:
-# /etc/rdup/rdup.conf
