@@ -1,4 +1,0 @@
-#
-# Regular cron jobs for the rdup package
-#
-0 4	* * *	root	rdup_maintenance
